--- a/app/styles/ui/_sandboxed-markdown.scss
+++ b/app/styles/ui/_sandboxed-markdown.scss
@@ -1,9 +1,22 @@
-.sandboxed-markdown-component {
-  // strip default styles
-  width: 100%;
-  height: 100%;
-  border: 0;
-  padding: 0;
-  margin: 0;
-  box-shadow: none;
+.sandboxed-markdown-iframe-container {
+  position: relative;
+  min-height: 50px;
+
+  .sandboxed-markdown-component {
+    // With compbination of setting height of containing div.
+    // These styles remove blocky auto height/scroll of iframe.
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    // strip default styles
+    width: 100%;
+    height: 100%;
+    border: 0;
+    padding: 0;
+    margin: 0;
+    box-shadow: none;
+  }
 }
