--- a/app/styles/ui/check-runs/_ci-check-run-logs.scss
+++ b/app/styles/ui/check-runs/_ci-check-run-logs.scss
@@ -10,7 +10,6 @@
   .ci-check-list-item-logs-output {
     padding: var(--spacing-half);
     max-height: 200px;
-    overflow: auto;
 
     .meta-output {
       h4 {
@@ -19,10 +18,14 @@
       }
     }
 
+    .sandboxed-markdown-iframe-container {
+      height: 150px;
     }
   }
 
   &.actions {
+    overflow: auto;
+
     color: var(--check-run-header-label-text-color);
     background-color: var(--check-run-bg-color);
     border-color: var(--check-run-border-color);
